<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_area_widget"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EEFFFFFF">

        <TextView
            android:id="@+id/txt_name"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/dark_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_name"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                android:layout_gravity="start"
                android:layout_weight="0.4"
                android:text="@string/str_area"/>

            <TextView
                android:id="@+id/area_measurement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_weight="0.6"
                android:paddingTop="10dp"
                android:layout_gravity="bottom"
                android:text="@string/str_acres"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/colorMatBlack" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="start"
                android:layout_weight="0.4"
                android:text="@string/str_distance"/>

            <TextView
                android:id="@+id/distance_measurement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_weight="0.6"
                android:layout_gravity="bottom"
                android:text="@string/str_kms"/>

        </LinearLayout>

</LinearLayout>