<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorMatBlack">

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_white_24dp"
        android:id="@+id/btnArrowLeft"
        android:padding="0dp"
        android:contentDescription="@string/move_left"
        style="?attr/borderlessButtonStyle"
        android:layout_weight="0.33"/>

    <!--<ImageButton-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--style="?attr/borderlessButtonStyle"-->
        <!--app:srcCompat="@drawable/ic_undo_white_24dp"-->
        <!--android:id="@+id/btnUndo"-->
        <!--android:layout_weight="0.25"/>-->

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_delete_white_24dp"
        android:id="@+id/btnDelete"
        android:contentDescription="@string/delete_marker"
        style="?attr/borderlessButtonStyle"
        android:layout_weight="0.33"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
        android:id="@+id/btnArrowRight"
        android:contentDescription="@string/move_right"
        style="?attr/borderlessButtonStyle"
        android:layout_weight="0.33"/>

    <!--<ImageButton-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:srcCompat="@drawable/ic_more_vert_white_24dp"-->
        <!--android:id="@+id/btnMore"-->
        <!--style="?attr/borderlessButtonStyle"-->
        <!--android:paddingLeft="30dp"-->
        <!--android:paddingStart="30dp"-->
        <!--android:layout_weight="0.25"/>-->

</LinearLayout>