<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:fab="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment"/>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/tools">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/fr_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab_menu"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|start"
            android:contentDescription="@string/calculations_menu"
            fab:fab_labelsPosition="right"
            fab:fab_labelStyle="@style/menu_labels_style_map"
            fab:fab_addButtonColorNormal="@color/colorAccent">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/to_calculate_area"
                fab:fab_size="normal"
                fab:fab_colorNormal="@color/bottom_background_color"
                fab:fab_title="Area"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_size="normal"
                android:contentDescription="@string/to_calculate_distance"
                fab:fab_colorNormal="@color/bottom_background_color"
                fab:fab_title="Distance"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

        <!--<ImageButton-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="#77000000"-->
            <!--android:gravity="center"-->
            <!--android:id="@+id/dustbin"-->
            <!--android:padding="3dp"-->
            <!--android:layout_marginTop="45dp"-->
            <!--android:layout_gravity="center_horizontal|bottom"-->
            <!--android:src="@android:drawable/ic_menu_delete"/>-->

        <LinearLayout
            android:id="@+id/calLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <include layout="@layout/layout_measures"
                     android:id="@+id/measures"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />

            <include layout="@layout/layout_controls"
                     android:id="@+id/controls"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_start_measuring"
            android:visibility="invisible"
            android:id="@+id/btnMeasure"
            android:layout_gravity="bottom"/>

    </FrameLayout>

</FrameLayout>

    <FrameLayout
        android:id="@+id/fragFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ListView
        android:id="@+id/list_content"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:paddingTop="20dp"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@color/colorMatBlack"
        android:drawSelectorOnTop="false" />

</android.support.v4.widget.DrawerLayout>